react-express-auth

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,9 +1,14 @@
 @import url(./__logo/header__logo.css);
-
+@import url(./__navigation/header__navigation.css);
+@import url(./__email/header__email.css);
+@import url(./__sign-out/header__sign-out.css);
 
 .header {
     max-width: 882px;
+    display: flex;
+    justify-content: space-between;
     margin: 0 auto 36.25px;
+    padding: 45px 200px 0;
     border: 1px solid #545454;
     border-right: none;
     border-left: none;
