--- a/src/blocks/login/__link-href/login__link-href.css
+++ b/src/blocks/login/__link-href/login__link-href.css
@@ -6,6 +6,8 @@
     text-decoration: none;
     color: #ffffff;
     padding-left: 72px;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 .login__link-href:hover {
