--- a/src/blocks/login/login.css
+++ b/src/blocks/login/login.css
@@ -6,10 +6,10 @@
 
 .login {
     font-family: "Inter";
+    height: 572px;
     max-width: 358px;
     width: 100%;
     display: block;
     margin: 0 auto;
     color: #ffffff;
-    margin-bottom: 112px;
 }
